...
  deployIfChanged('Deploy if changed', Icons.difference_outlined),
  deploy('Deploy', AppIcons.deployments),
  pull('Pull', Icons.download_outlined),
  start('Start', AppIcons.play),
  stop('Stop', Icons.stop_circle_outlined),
  restart('Restart', Icons.restart_alt),
  destroy('Destroy', Icons.delete_outline),
  run('Run', AppIcons.play),
  cancel('Cancel', Icons.cancel_outlined);

  const ResourceBatchAction(this.label, this.icon);

  final String label;
...
